--- a/style.css
+++ b/style.css
@@ -202,26 +202,6 @@ img{
 
 /* ------------------------ social media handles  ------------------------   */
 
-.header .social-links{
-    text-align: center;
-
-
-}
-
-.header .social-links a{
-    
-    width: 5.5vh;
-    display: inline-block;
-    /* background-color: navajowhite; */
-    color: #e2b1f7;
-    margin-top: 1.5vh;
-}
-
-.header .social-links a :hover{
-    color: rgb(232, 253, 5);
-    animation: rightBounce3 1.6s ease-in-out infinite;
-    ;
-}
 
 
 
@@ -232,7 +212,6 @@ img{
     width: 100%;
     height: 8vh;
     margin-top: 10vh;
-    
     
 }
 
@@ -1730,13 +1709,36 @@ img{
 
 .footer{
     background-color: rgb(11, 0, 23);
-    padding: 20px 10px;
+    padding: 22px 10px;
     position: absolute;
     width: 100%;
-    height: 10vh;
-    
+    height: 16vh;
     
 }
+
+
+.footer .social-links{
+    
+    display: inline-flex;
+
+}
+
+
+.footer .social-links a{
+    
+    width: 5.5vh;
+    
+    /* background-color: navajowhite; */
+    color: #e2b1f7;
+    margin-top: 1.5vh;
+}
+
+.footer .social-links a :hover{
+    color: rgb(232, 253, 5);
+    animation: rightBounce3 1.6s ease-in-out infinite;
+    ;
+}
+
 
 .footer .copyright-text{
     
